Advertise, discover, connect

--- a/hello_cloud_android/app/build.gradle
+++ b/hello_cloud_android/app/build.gradle
@@ -36,8 +36,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.activity:activity:1.8.1'
     implementation "androidx.navigation:navigation-fragment:2.7.5"
-    implementation "androidx.navigation:navigation-ui:2.7.5"
-
+    implementation 'androidx.navigation:navigation-ui:2.7.5'
+    implementation 'com.google.android.gms:play-services-nearby:19.0.0'
     implementation 'com.google.android.material:material:1.10.0'
 
 }
