--- a/hello_cloud_android/app/build.gradle
+++ b/hello_cloud_android/app/build.gradle
@@ -39,5 +39,5 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.7.5'
     implementation 'com.google.android.gms:play-services-nearby:19.0.0'
     implementation 'com.google.android.material:material:1.10.0'
-
+    implementation 'com.google.code.gson:gson:2.8.9'
 }
