--- a/hello_cloud_android/app/build.gradle
+++ b/hello_cloud_android/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -40,4 +41,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-nearby:19.0.0'
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'com.google.code.gson:gson:2.8.9'
+
+    implementation(platform("com.google.firebase:firebase-bom:32.7.0"))
+    implementation("com.google.firebase:firebase-storage")
 }
