Upload logic. It's not working yet.

--- a/hello_cloud_android/app/src/main/AndroidManifest.xml
+++ b/hello_cloud_android/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
         android:usesPermissionFlags="neverForLocation" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
 
     <application
         android:allowBackup="true"
