iOS: add skeleton code from https://firebase.google.com/docs/cloud-messaging/ios/client for receiving push notifications.

--- a/hello_cloud_apple/HelloCloudApple/Info.plist
+++ b/hello_cloud_apple/HelloCloudApple/Info.plist
@@ -6,5 +6,11 @@
 	<array>
 		<string>_307BEAB11028._tcp</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>processing</string>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
