iOS: bug fixes and clean ups

--- a/hello_cloud_firebase/firebase.json
+++ b/hello_cloud_firebase/firebase.json
@@ -17,12 +17,15 @@
   ],
   "emulators": {
     "functions": {
+      "host": "0.0.0.0",
       "port": 5001
     },
     "database": {
+      "host": "0.0.0.0",
       "port": 9000
     },
     "storage": {
+      "host": "0.0.0.0",
       "port": 9199
     },
     "ui": {
