Android: Initial Firebase Database hookup

--- a/hello_cloud_android/app/build.gradle
+++ b/hello_cloud_android/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
 
     implementation(platform("com.google.firebase:firebase-bom:32.7.0"))
     implementation("com.google.firebase:firebase-storage")
+    implementation("com.google.firebase:firebase-database")
 }
