--- a/hello_cloud_android/app/build.gradle
+++ b/hello_cloud_android/app/build.gradle
@@ -41,10 +41,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-nearby:19.0.0'
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
-    
     implementation 'com.google.code.gson:gson:2.10.1'
-
     implementation(platform('com.google.firebase:firebase-bom:32.7.0'))
     implementation('com.google.firebase:firebase-storage')
     implementation('com.google.firebase:firebase-database')
+    implementation('com.journeyapps:zxing-android-embedded:4.1.0')
+
 }
