Android: Hook up QR transfer notification; add push notification (WIP)

--- a/hello_cloud_android/app/build.gradle
+++ b/hello_cloud_android/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation(platform('com.google.firebase:firebase-bom:32.7.0'))
     implementation('com.google.firebase:firebase-storage')
     implementation('com.google.firebase:firebase-database')
+    implementation('com.google.firebase:firebase-messaging')
     implementation('com.journeyapps:zxing-android-embedded:4.1.0')
 
 }
