--- a/hello_cloud_android/app/src/main/AndroidManifest.xml
+++ b/hello_cloud_android/app/src/main/AndroidManifest.xml
@@ -57,6 +57,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name="com.google.hellocloud.MessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
