--- a/rust/presence/engine/Cargo.toml
+++ b/rust/presence/engine/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "engine"           # The name of the target.
+path = "src/lib.rs"    # The source file of the target.
 
 [dependencies]
 futures = "0.3.30"
