--- a/presence/rust/engine_tests/CMakeLists.txt
+++ b/presence/rust/engine_tests/CMakeLists.txt
@@ -21,4 +21,4 @@ add_dependencies(main engine)
 add_executable(test_main test_main.cpp)
 target_link_libraries(test_main PRIVATE ${LIB_ENGINE_SO} Catch2::Catch2)
 add_dependencies(test_main engine)
-add_test(NAME test_main COMMAND test_main)
+add_test(NAME c_engine_test COMMAND test_main)
