--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -46,11 +46,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build Connections
-      run: CC=/usr/bin/clang-15 CXX=/usr/bin/clang-15++ bazel build --copt='-DGITHUB_BUILD' //connections:core
+      run: CC=clang-15 CXX=clang-15++ bazel build --copt='-DGITHUB_BUILD' //connections:core
     - name: Build Presence
-      run: CC=/usr/bin/clang-15 CXX=/usr/bin/clang-15++ bazel build --copt='-DGITHUB_BUILD' //presence
+      run: CC=clang-15 CXX=clang-15++ bazel build --copt='-DGITHUB_BUILD' //presence
     - name: Build Sharing
-      run: CC=/usr/bin/clang-15 CXX=/usr/bin/clang-15++ bazel build --verbose_failures --copt='-DGITHUB_BUILD' //sharing:nearby_sharing_service //sharing/certificates //sharing/contacts //sharing/local_device_data //sharing/proto/... //sharing/internal/public:nearby_context //sharing/common:all //sharing/scheduling //sharing/fast_initiation:nearby_fast_initiation //sharing/analytics
+      run: CC=clang-15 CXX=clang-15++ bazel build --verbose_failures --copt='-DGITHUB_BUILD' //sharing:nearby_sharing_service //sharing/certificates //sharing/contacts //sharing/local_device_data //sharing/proto/... //sharing/internal/public:nearby_context //sharing/common:all //sharing/scheduling //sharing/fast_initiation:nearby_fast_initiation //sharing/analytics
 
   build-rust-linux:
     name: Build Rust on Linux
