Remove pointer-based overload of RandBytes()
The pointer-based overload is going away in Chromium base: https://chromium-review.googlesource.com/c/chromium/src/+/5514816

Add `base/containers/span.h` to the Chromium build shims, and use it from
`internal/crypto_cros/random.h`. This makes the signature match and also provides
all the base span helpers that are needed to work with spans nicely.

Then we use those helpers to convert calls to the span-based `RandBytes()`.

There is previously some confusion in the Chromium shims as they have the same names
and namespaces as Chromium but not always the same signatures. And the shims are
sometimes included even in a Chromium build, which produces ODR violations. To resolve
this we:
- Split random.h and random.cc into a separate `random_chromuim` build target.
- Introduce new base headers from chromium into a `base_chromium` build target.
- Introduce new build headers from chromium into a `build_chromium` build target.
- In every chromium shim header add an `#error` if included inside the chromium build,
  which is when `NEARBY_CHROMIUM` is defined.

Then, we fix a few include sites of random.h to only include the shim when not in the
Chromium build. As we find the `#error` hit in the Chromium build now.

--- a/internal/base/BUILD
+++ b/internal/base/BUILD
@@ -42,6 +42,53 @@ cc_library(
 )
 
 cc_library(
+    name = "base_chromium",
+    srcs = [
+    ],
+    hdrs = [
+        "check.h",
+        "check_op.h",
+        "compiler_specific.h",
+        "containers/checked_iterators.h",
+        "containers/dynamic_extent.h",
+        "containers/span.h",
+        "containers/util.h",
+        "memory/raw_ptr_exclusion.h",
+        "types/to_address.h",
+        "numerics/angle_conversions.h",
+        "numerics/basic_ops_impl.h",
+        "numerics/byte_conversions.h",
+        "numerics/checked_math.h",
+        "numerics/checked_math_impl.h",
+        "numerics/clamped_math.h",
+        "numerics/clamped_math_impl.h",
+        "numerics/math_constants.h",
+        "numerics/ostream_operators.h",
+        "numerics/ranges.h",
+        "numerics/safe_conversions_arm_impl.h",
+        "numerics/safe_conversions.h",
+        "numerics/safe_conversions_impl.h",
+        "numerics/safe_math_arm_impl.h",
+        "numerics/safe_math_clang_gcc_impl.h",
+        "numerics/safe_math.h",
+        "numerics/safe_math_shared_impl.h",
+        "numerics/wrapping_math.h",
+    ],
+    copts = [
+        "-Ithird_party",
+    ],
+    visibility = [
+        "//internal/crypto_cros:__pkg__",
+        "//internal/crypto_chromium:__pkg__",
+    ],
+    deps = [
+        "//internal/build:build_chromium",
+        "@com_google_absl//absl/base",
+        "@com_google_absl//absl/log:check",
+    ],
+)
+
+cc_library(
     name = "bluetooth_address",
     srcs = [
         "bluetooth_address.cc",
