--- a/internal/platform/BUILD
+++ b/internal/platform/BUILD
@@ -328,6 +328,7 @@ cc_library(
         "//internal/auth:__subpackages__",
         "//internal/auth/credential_store:__subpackages__",
         "//internal/base:__subpackages__",
+        "//internal/crypto:__subpackages__",
         "//internal/data:__subpackages__",
         "//internal/flags:__subpackages__",
         "//internal/interop:__pkg__",
@@ -360,6 +361,7 @@ cc_library(
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/synchronization",
         "@com_google_absl//absl/time",
+        "@com_google_absl//absl/types:span",
     ],
 )
 
@@ -445,6 +447,7 @@ cc_test(
         "multi_thread_executor_test.cc",
         "mutex_test.cc",
         "pipe_test.cc",
+        "random_unittest.cc",
         "scheduled_executor_test.cc",
         "single_thread_executor_test.cc",
         "task_runner_impl_test.cc",
