--- a/presence/rust/engine/presence_cpp_ffi/tests/CMakeLists.txt
+++ b/presence/rust/engine/presence_cpp_ffi/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
-include(FetchContent)
 include(CTest)
 include_directories("${CMAKE_SOURCE_DIR}")
 
+include(FetchContent)
 FetchContent_Declare(
   catch
   GIT_REPOSITORY https://github.com/catchorg/Catch2.git
@@ -14,6 +14,6 @@ get_target_property(PRESENCE_DIR presence BINARY_DIR)
 set(LIB_ENGINE_A ${PRESENCE_DIR}/libpresence.a)
 
 add_executable(test_main test_main.cpp)
-target_link_libraries(test_main PRIVATE ${LIB_ENGINE_A} Catch2::Catch2)
+target_link_libraries(test_main PRIVATE ${LIB_ENGINE_A} spdlog::spdlog Catch2::Catch2)
 add_dependencies(test_main presence)
-add_test(NAME c_engine_test COMMAND test_main)
+add_test(NAME integration_test_cpp COMMAND test_main)
