Sort out the build dependece.
Build rust_to_c libarary inside Cargo build.rs since Rust codes depends
on rust_to_c.a.

Now, we have the right build dependence C++ example/test -> Rust -> rust_to_c.cpp.

After this change, we can
Cargo build Rust directly including its C library as:
cargo build

We can also build the C++ example and test as
cmake presence_cpp_ffi
make

--- a/presence/rust/engine/presence_cpp_ffi/Cargo.toml
+++ b/presence/rust/engine/presence_cpp_ffi/Cargo.toml
@@ -9,7 +9,6 @@ edition = "2021"
 name = "presence"
 crate-type = ["staticlib"]
 
-
 [dependencies]
 presence_core = { path = "../presence_core" }
 tokio = { version = "1.36.0", features = ["sync"] }
@@ -20,4 +19,4 @@ libc = "^0.2"
 [build-dependencies]
 cbindgen = "0.24.0"
 bindgen = "0.65.1"
-
+cmake = "0.1"
