--- a/presence/rust/engine/presence_cpp_ffi/cpp/CMakeLists.txt
+++ b/presence/rust/engine/presence_cpp_ffi/cpp/CMakeLists.txt
@@ -1,1 +1,5 @@
-add_library(cpp_ffi rust_to_c.cpp)
+cmake_minimum_required(VERSION 3.14...3.28)
+project(presence_cpp_ffi)
+
+add_library(rust_to_c rust_to_c.cpp)
+install(TARGETS rust_to_c)
