--- a/presence/rust/engine/presence_cpp_ffi/tests/CMakeLists.txt
+++ b/presence/rust/engine/presence_cpp_ffi/tests/CMakeLists.txt
@@ -1,5 +1,6 @@
 include(CTest)
 include_directories("${CMAKE_SOURCE_DIR}")
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 include(FetchContent)
 FetchContent_Declare(
@@ -13,7 +14,15 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 get_target_property(PRESENCE_DIR presence BINARY_DIR)
 set(LIB_ENGINE_A ${PRESENCE_DIR}/libpresence.a)
 
-add_executable(test_main test_main.cpp)
-target_link_libraries(test_main PRIVATE ${LIB_ENGINE_A} spdlog::spdlog Catch2::Catch2)
-add_dependencies(test_main presence)
-add_test(NAME integration_test_cpp COMMAND test_main)
+add_executable(integration_test integration_test.cpp)
+target_link_libraries(integration_test PRIVATE ${LIB_ENGINE_A} spdlog::spdlog Catch2::Catch2)
+add_dependencies(integration_test presence)
+add_test(NAME integration_test_cpp COMMAND integration_test)
+
+# For unit test.
+add_library(rust_to_c ../cpp/rust_to_c.cpp)
+
+add_executable(unit_tests unit_tests.cpp)
+target_link_libraries(unit_tests PRIVATE rust_to_c spdlog::spdlog Catch2::Catch2)
+add_dependencies(unit_tests rust_to_c)
+add_test(NAME unit_tests_cpp COMMAND unit_tests)
