--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -2,17 +2,17 @@ bazel_dep(name = "platforms", version = "0.0.8")
 bazel_dep(name = "rules_cc", version = "0.0.9")
 bazel_dep(name = "rules_rust", version = "0.42.1")
 bazel_dep(name = "bazel_skylib", version = "1.5.0")
-
 bazel_dep(name = "abseil-cpp", version = "20240116.1", repo_name = "com_google_absl")
 bazel_dep(name = "protobuf", version = "21.7", repo_name = "com_google_protobuf")
 bazel_dep(name = "googletest", version = "1.14.0", repo_name = "com_google_googletest")
 bazel_dep(name = "boringssl", version = "0.0.0-20240126-22d349c")
 
 git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
+
 git_repository(
     name = "beto-core",
-    remote = "https://beto-core.googlesource.com/beto-core",
     commit = "415bd032561d078720642d52e28fd3bc9d5155d4",
+    remote = "https://beto-core.googlesource.com/beto-core",
 )
 
 rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
@@ -21,6 +21,7 @@ rust.toolchain(
     versions = ["1.77.1"],
 )
 use_repo(rust, "rust_toolchains")
+
 register_toolchains("@rust_toolchains//:all")
 
 crate = use_extension(
@@ -46,7 +47,6 @@ http_archive(
 
 http_archive(
     name = "aappleby_smhasher",
-    strip_prefix = "smhasher-master",
     build_file_content = """
 package(default_visibility = ["//visibility:public"])
 cc_library(
@@ -56,12 +56,12 @@ cc_library(
     copts = ["-Wno-implicit-fallthrough"],
     licenses = ["unencumbered"],  # MurmurHash is explicity public-domain
 )""",
+    strip_prefix = "smhasher-master",
     urls = ["https://github.com/aappleby/smhasher/archive/master.zip"],
 )
 
 http_archive(
     name = "nlohmann_json",
-    strip_prefix = "json-3.10.5",
     build_file_content = """
 cc_library(
   name = "json",
@@ -72,6 +72,7 @@ cc_library(
   visibility = ["//visibility:public"],
   alwayslink = True,
 )""",
+    strip_prefix = "json-3.10.5",
     urls = [
         "https://github.com/nlohmann/json/archive/refs/tags/v3.10.5.tar.gz",
     ],
@@ -85,8 +86,8 @@ cc_library(
 #   https://github.com/google-research/nisaba
 http_archive(
     name = "com_google_nisaba",
-    url = "https://github.com/google-research/nisaba/archive/refs/heads/main.zip",
     strip_prefix = "nisaba-main",
+    url = "https://github.com/google-research/nisaba/archive/refs/heads/main.zip",
 )
 
 # -------------------------------------------------------------------------
@@ -94,6 +95,12 @@ http_archive(
 #   https://github.com/inazarenko/protobuf-matchers
 http_archive(
     name = "com_github_protobuf_matchers",
-    urls = ["https://github.com/inazarenko/protobuf-matchers/archive/refs/heads/master.zip"],
     strip_prefix = "protobuf-matchers-master",
+    urls = ["https://github.com/inazarenko/protobuf-matchers/archive/refs/heads/master.zip"],
+)
+
+http_archive(
+    name = "bazel_pkg_config",
+    strip_prefix = "bazel_pkg_config-master",
+    urls = ["https://github.com/cherrry/bazel_pkg_config/archive/master.zip"],
 )
