added wifi lan medium implementation for linux

--- a/internal/platform/implementation/linux/BUILD
+++ b/internal/platform/implementation/linux/BUILD
@@ -16,6 +16,11 @@ licenses(["notice"])
 
 cc_library(
     name = "types",
+    srcs = [
+        "device_info.cc",
+        "log_message.cc",
+        "timer.cc",
+    ],
     hdrs = [
         "atomic_boolean.h",
         "atomic_reference.h",
@@ -25,20 +30,15 @@ cc_library(
         "device_info.h",
         "executor.h",
         "future.h",
+        "log_message.h",
         "mutex.h",
         "preferences_manager.h",
         "preferences_repository.h",
         "scheduled_executor.h",
         "submittable_executor.h",
-        "timer.h",
         "thread_pool.h",
-        "log_message.h",
+        "timer.h",
         "utils.h",
-    ],
-    srcs = [
-        "device_info.cc",
-        "log_message.cc",
-        "timer.cc",
     ],
     copts = ["-lrt"],
     visibility = ["//third_party/nearby/sharing/internal/impl/linux:__pkg__"],
@@ -46,6 +46,7 @@ cc_library(
         ":comm",
         "//internal/platform/implementation:types",
         "@com_google_absl//absl/strings",
+        "@com_google_glog//:glog",
         "@libsystemd//:lib",
         "@sdbus_cpp//:lib",
     ],
@@ -55,34 +56,35 @@ cc_library(
     name = "comm",
     hdrs = [
         "avahi.h",
-        "ble_medium.h",
-        "ble_v2_medium.h",
-        "bluetooth_adapter.h",
-        "bluetooth_bluez_profile.h",
-        "bluetooth_classic_device.h",
-        "bluetooth_classic_medium.h",
-        "bluetooth_classic_server_socket.h",
-        "bluetooth_classic_socket.h",
-        "bluetooth_devices.h",
-        "bluetooth_pairing.h",
-        "bluez.h",
+        #        "ble_medium.h",
+        #        "ble_v2_medium.h",
+        #        "bluetooth_adapter.h",
+        #        "bluetooth_bluez_profile.h",
+        #        "bluetooth_classic_device.h",
+        #        "bluetooth_classic_medium.h",
+        #        "bluetooth_classic_server_socket.h",
+        #        "bluetooth_classic_socket.h",
+        #        "bluetooth_devices.h",
+        #        "bluetooth_pairing.h",
+        #        "bluez.h",
         "dbus.h",
         "network_manager.h",
-        "network_manager_active_connection.h",
         "network_manager_access_point.h",
+        "network_manager_active_connection.h",
         "stream.h",
-        "wifi_direct.h",
-        "wifi_direct_server_socket.h",
-        "wifi_direct_socket.h",
-        "wifi_hotspot.h",
-        "wifi_hotspot_server_socket.h",
-        "wifi_hotspot_socket.h",
+        #        "wifi_direct.h",
+        #        "wifi_direct_server_socket.h",
+        #        "wifi_direct_socket.h",
+        #        "wifi_hotspot.h",
+        #        "wifi_hotspot_server_socket.h",
+        #        "wifi_hotspot_socket.h",
         "wifi_lan.h",
         "wifi_lan_server_socket.h",
         "wifi_lan_socket.h",
         "wifi_medium.h",
         "wifi_socket.h",
     ],
+    visibility = ["//visibility:private"],
     deps = [
         "//internal/platform:base",
         "//internal/platform:comm",
@@ -105,7 +107,6 @@ cc_library(
         "@libsystemd//:lib",
         "@sdbus_cpp//:lib",
     ],
-    visibility = ["//visibility:private"],
 )
 
 cc_library(
@@ -119,21 +120,22 @@ cc_library(
         "//internal/platform/implementation:types",
         "@boringssl//:crypto",
         "@com_google_absl//absl/strings",
-])
+    ],
+)
 
 cc_library(
     name = "linux",
     srcs = [
         "avahi.cc",
-        "bluetooth_adapter.cc",
-        "bluetooth_bluez_profile.cc",
-        "bluetooth_classic_socket.cc",
-        "bluetooth_classic_device.cc",
-        "bluetooth_classic_medium.cc",
-        "bluetooth_classic_server_socket.cc",
-        "bluetooth_devices.cc",
-        "bluetooth_pairing.cc",
-        "bluez.cc",
+        #        "bluetooth_adapter.cc",
+        #        "bluetooth_bluez_profile.cc",
+        #        "bluetooth_classic_device.cc",
+        #        "bluetooth_classic_medium.cc",
+        #        "bluetooth_classic_server_socket.cc",
+        #        "bluetooth_classic_socket.cc",
+        #        "bluetooth_devices.cc",
+        #        "bluetooth_pairing.cc",
+        #        "bluez.cc",
         "dbus.cc",
         "executor.cc",
         "network_manager.cc",
@@ -147,10 +149,10 @@ cc_library(
         "system_clock.cc",
         "thread_pool.cc",
         "utils.cc",
-        "wifi_direct.cc",
-        "wifi_direct_server_socket.cc",
-        "wifi_hotspot.cc",
-        "wifi_hotspot_server_socket.cc",
+        #        "wifi_direct.cc",
+        #        "wifi_direct_server_socket.cc",
+        #        "wifi_hotspot.cc",
+        #        "wifi_hotspot_server_socket.cc",
         "wifi_lan.cc",
         "wifi_lan_server_socket.cc",
         "wifi_medium.cc",
@@ -176,9 +178,9 @@ cc_library(
         "//internal/platform/implementation:comm",
         "//internal/platform/implementation:platform",
         "//internal/platform/implementation:types",
+        "//internal/platform/implementation/linux/generated:types",
         "//internal/platform/implementation/shared:count_down_latch",
         "//internal/platform/implementation/shared:file",
-        "//internal/platform/implementation/linux/generated:types",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/functional:any_invocable",
@@ -191,10 +193,10 @@ cc_library(
         "@com_google_absl//absl/synchronization",
         "@com_google_absl//absl/time",
         "@com_google_absl//absl/types:optional",
-        "@nlohmann_json//:json",
+        "@libcurl//:lib",
         "@libsystemd//:lib",
+        "@nlohmann_json//:json",
         "@sdbus_cpp//:lib",
-        "@libcurl//:lib"
     ],
 )
 
@@ -211,9 +213,9 @@ cc_library(
         "//visibility:private",  # Only private by automation, not intent. Owner may accept CLs adding visibility. See go/scheuklappen#explicit-private.
     ],
     deps = [
+        ":types",
         "//internal/platform:base",
         "@nlohmann_json//:json",
-        ":types",
     ],
 )
 
@@ -242,9 +244,9 @@ cc_test(
     deps = [
         ":comm",
         ":crypto",
+        ":linux",
         ":test_utils",
         ":types",
-        ":linux",
         "//internal/platform:base",
         "//internal/platform/implementation:comm",
         "//internal/platform/implementation:platform",
